--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,4 @@
+  
 html {
     height: 100%;
 }
@@ -96,7 +97,9 @@ a.category-badge > span.badge:hover {
     right: 10px;
 }
 
-.btt-link {
+.btt-link,
+.update-link,
+.remove-item {
     cursor: pointer;
 }
 
